...
  await showDialog(
    context: context,
    builder: (context) {
      return AlertDialog(
        title: Text(title),
        content: TextField(
          key: ValueKey('set_amount_dialogue_input_area'),
          controller: _controller,
          keyboardType: onlyNumbers
              ? TextInputType.numberWithOptions(decimal: true)
              : null,
          inputFormatters: onlyNumbers
              ? [
...
                      value.lastIndexOf(allowedSymbol) + 1, ''));
            }
          },
        ),
        actions: [
          TextButton(
            key: ValueKey('set_amount_dialogue_apply_button'),
            onPressed: () {
              final text = _controller.text.trim();
              Navigator.of(context).pop();
              onApply(text);
            },
            child: Text(S.of(context).apply),
...
