...
                                      title: title,
                                      leading: IconButton(
                                        onPressed: onExitTap,
                                        icon: Icon(Icons.close),
                                      ),
                                      buttonIcon: Icons.check,
                                      buttonKey: ValueKey('accept_buy_button_key'),
                                      onTap: () {
                                        if (BlocProvider.of<EditBuyScreenCubit>(
                                                context)
                                            .isValid) {
                                          final currentState = BlocProvider.of<
                                                  EditBuyScreenCubit>(context)
...
                  rigthTitle: cubit.state.scoreItem?.name ?? '-',
                  insteadRightTitle: DropdownButton(
                      key: EditBuyScreenKeys.scoreDropDownItem.key,
                      value: state.scoreItem,
                      items: accountsAndCategories.accountItems
                          .map((e) => DropdownMenuItem(
                              key: ValueKey('score_name'),
                              value: e,
                              child: Text(e.name)))
                          .toList(),
                      onChanged: (value) {
                        if (value != null) {
                          cubit.updateScoreItem(value.id, value.name);
...
