...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) {
    return TextField(
      key: ValueKey('universal_list_item_with_changing_title_input_key'),
      controller: _controller,

      decoration: InputDecoration(
        hintText: widget.initialText ?? widget.hintText ?? '',
        hintStyle: context.textTheme.bodyMedium!
            .copyWith(color: context.theme.secondaryTextColor),
...
